# confederate

./: README.md  docker-compose.yaml  pyproject.toml
flwr_client/: .gitignore  Dockerfile  app.py  app2.py  ipfs.py  pyproject.toml  requirements.txt  utils.py
flwr_server/: Dockerfile  app.py  app2.py  frontend.py  p.py  pyproject.toml  requirements.txt
