[tool.poetry]
name = "flwr-client"
version = "0.1.0"
description = ""
authors = ["Shreyas Kaundinya <shreyassk08@gmail.com>"]
readme = "README.md"
packages = [{include = "flwr_client"}]

[tool.poetry.dependencies]
python = "^3.10"
flwr = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

